== Changelog ==

= 3.10.3 =
* Fix: Resolved issue with duplicate post IDs in query blocks
* Added: Context awareness to properly identify post IDs in query loops
* Enhanced: Shortcode functionality to respect post context in WordPress loops
* Added: JavaScript fallback to detect and fix incorrect IDs at runtime
* Improved: Database optimization for better performance and compatibility

= 3.10.2 =
* Fix: Template tag not outputting the recommend link

= 3.10.1 =
* Fix: Correct post ID parsing in AJAX request to ensure proper recommendation handling

= 3.10.0 =
* Security update
* Code Refactor
* Added Block

= 3.9.1 =
* Security update

= 3.9.0 =
* Added support for un-recommending/un-liking a post
* Fixed data sanitization
* Fixed data escaping

= 3.8.1 =
* Added data sanitization
* Separate & recoded widget
* Support for multiple widget instances

= 3.8.0 =
* Added data sanitization
* Made IP saving options
* Restructured plugin code

= 3.7.8 =
* Vulnerabilities fixed by DannyvanKooten

= 3.7.7 =
* Dutch Translation added by Tim de Hoog
* Added support for IPv6

= 3.7.6 =
* Fixed version number in dot-irecommendthis.php

= 3.7.5 =
* Updated Readme

= 3.7.4 =
* The template tag now accepts a POST ID, thanks to [Oskar Adin](https://github.com/osadi).

= 3.7.3 =
* Fixed a possible SQL injection vulnerability reported by [Oskar Adin](https://github.com/osadi) and fixed by [Danny van Kooten](https://twitter.com/DannyvanKooten).

= 3.7.2 =
* Updated 'dot_irecommendthis.js' file to make the plugin work even when the like button is on a hidden element. Thanks to [forthewinn](http://wordpress.org/support/profile/forthewinn). [Support Ticket](http://wordpress.org/support/topic/recommendation-to-fix-usage-in-hiddenexpanding-elements)

= 3.7.1 =
* Spanish translation added. Thanks to Andrew Kurtis from [WebHostingHub](http://www.webhostinghub.com/)

= 3.7.0 =
* Removed wrong tags set for this plugin earlier. My sincere apologies for the extra update mess.

= 2.6.5 =