@@ -6,6 +6,11 @@
 * Enhanced: Shortcode functionality to respect post context in WordPress loops
 * Added: JavaScript fallback to detect and fix incorrect IDs at runtime
 * Improved: Database optimization for better performance and compatibility
+* Refactored: Database management error handling
+* Removed: Development-specific logging methods
+* Security: Improved error handling following WordPress best practices
+* Fixed: Potential security risks in database management logging
+* Enhanced: Plugin stability and error notification mechanisms
 
 = 3.10.2 =
 * Fix: Template tag not outputting the recommend link
